step3 수정본